tests/miniJava/neg/000370_mutation.MiniJava
class java { public static void Main ( String [ class java ) { { } } }
